tests/miniJava/neg/001462_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int System.out.println 0 ] ; } }
